--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
           <h3>MiniPrint</h3>
           <img src="./img/mini-print.PNG" alt="foto da MiniPrint ">
           <p>CNC feita com drives de DVD para desenhos precisos e automáticos.</p>
-          <button>Ver video</button>
+          <button><a class="link" href="https://youtube.com/shorts/B2p8jyNnN3c?si=P0cFCq3cRGNAOZ2Y">Ver video</a></button>
         </div>
 
         <div class="cards">
           <h3>Separador de lixo</h3>
           <img src="./img/separador de lixo.PNG" alt="foto da MiniPrint ">
           <p>Tecnologia sustentável para facilitar a separação correta dos resíduos e ajudar o meio ambiente.</p>
-          <button>Ver video</button>
+          <button><a class="link" href="https://youtube.com/shorts/oIPvZPkh7v4?si=Mgkv0KTVoIjS8WeQ">Ver video</a></button>
         </div>
 
       </div>
     </div>
 
     <footer>
-       
+      
 
        <p>© 2025 - Todos os direitos reservados ao 2º ano EMTI.</p>
 
