--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h3>Separador de lixo</h3>
           <img src="./img/separador de lixo.PNG" alt="foto da MiniPrint ">
           <p>Tecnologia sustentável para facilitar a separação correta dos resíduos e ajudar o meio ambiente.</p>
-          <button><a class="link" href="https://youtube.com/shorts/oIPvZPkh7v4?si=Mgkv0KTVoIjS8WeQ">Ver video</a></button>
+          <button><a class="link" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a></button>
         </div>
 
       </div>
