ajustede button com a

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
           <h3>MiniPrint</h3>
           <img src="./img/mini-print.PNG" alt="foto da MiniPrint ">
           <p>CNC feita com drives de DVD para desenhos precisos e automáticos.</p>
-          <button><a class="link" href="https://youtube.com/shorts/B2p8jyNnN3c?si=P0cFCq3cRGNAOZ2Y">Ver video</a></button>
+          <a class="link button" href="https://youtube.com/shorts/B2p8jyNnN3c?si=P0cFCq3cRGNAOZ2Y">Ver video</a>
         </div>
 
         <div class="cards">
           <h3>Separador de lixo</h3>
           <img src="./img/separador de lixo.PNG" alt="foto da MiniPrint ">
-          <p>Tecnologia sustentável para facilitar a separação correta dos resíduos e ajudar o meio ambiente.</p>
-          <button><a class="link" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a></button>
+          <p>Tecnologia sustentável para facilitar a separação correta dos resíduos.</p>
+          <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
         </div>
 
       </div>
