adiçao de imagens

--- a/index.html
+++ b/index.html
@@ -38,8 +38,16 @@
 
         <div class="cards">
           <h3>Separador de lixo</h3>
-          <img src="./img/separador de lixo.PNG" alt="foto da MiniPrint ">
+          <img src="./img/separador de lixo.PNG" alt="foto da lixo ">
           <p>Tecnologia sustentável para facilitar a separação correta dos resíduos.</p>
+          <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
+        </div>
+
+        
+        <div class="cards">
+          <h3>Mec</h3>
+          <img class="img2" src="./img/roboMec.jpg" alt="foto do mec ">
+          <p>O robô de papelão que nasceu da criatividade e do talento dos nossos alunos.</p>
           <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
         </div>
 
