--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <div class="projetos">
 
         <div class="cards">
-          <h3>MiniPrint</h3>
+          <h3 class="titulo-salas">MiniPrint</h3>
           <img src="./img/mini-print.PNG" alt="foto da MiniPrint ">
           <p>CNC feita com drives de DVD para desenhos precisos e automáticos.</p>
           <a class="link button" href="https://youtube.com/shorts/B2p8jyNnN3c?si=P0cFCq3cRGNAOZ2Y">Ver video</a>
         </div>
 
         <div class="cards">
-          <h3>Separador de lixo</h3>
+          <h3 class="titulo-salas">Separador de lixo</h3>
           <img src="./img/separador de lixo.PNG" alt="foto da lixo ">
           <p>Tecnologia sustentável para facilitar a separação correta dos resíduos.</p>
           <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
@@ -45,11 +45,13 @@
 
         
         <div class="cards">
-          <h3>Mec</h3>
+          <h3 class="titulo-salas">Mec</h3>
           <img class="img2" src="./img/roboMec.jpg" alt="foto do mec ">
           <p>O robô de papelão que nasceu da criatividade e do talento dos nossos alunos.</p>
           <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
         </div>
+
+        
 
       </div>
     </div>
