--- a/index.html
+++ b/index.html
@@ -48,10 +48,22 @@
           <h3 class="titulo-salas">Mec</h3>
           <img class="img2" src="./img/roboMec.jpg" alt="foto do mec ">
           <p>O robô de papelão que nasceu da criatividade e do talento dos nossos alunos.</p>
+          <a class="link button3" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
+        </div>
+
+        <div class="cards">
+          <h3 class="titulo-salas">Contador automático</h3>
+          <img class="img3" src="./img/5039715823878527143.jpg" alt="foto do mec ">
+          <p>O robô de papelão que nasceu da criatividade e do talento dos nossos alunos.</p>
           <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
         </div>
 
-        
+        <div class="cards">
+          <h3 class="titulo-salas">Ponto dos alunos</h3>
+          <img class="img3" src="./img/5039715823878527144.jpg" alt="foto do mec ">
+          <p>O robô de papelão que nasceu da criatividade e do talento dos nossos alunos.</p>
+          <a class="link button3" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
+        </div>
 
       </div>
     </div>
