adiçao de cards

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="cards">
           <h3 class="titulo-salas">Separador de lixo</h3>
-          <img src="./img/separador de lixo.PNG" alt="foto da lixo ">
+          <img src="./img/separador de lixo.PNG" alt="foto do separador de lixo ">
           <p>Tecnologia sustentável para facilitar a separação correta dos resíduos.</p>
           <a class="link button" href="https://youtube.com/shorts/wPZEKcu91gk?si=8QKiCwbAiBfLNtsf">Ver video</a>
         </div>
